--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+:root {
+    --bg-color: #003636;
+    --card-bg-color: #001127;
+
+    --text-color: #f1f1f1;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,12 +15,68 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html, body {
+    width: 100%;
+}
+
 body {
-    background-color: #002c1b;
+    background-color: var(--bg-color);
+    background: url('img/bg-desktop.webp');
+    color: var(--text-color);
 }
 
 #card-container {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    padding: 10px;
+}
+
+.card {
+    height: 260px;
+    padding: 17px;
+    flex-basis: calc(33.33% - 10px);
+    background-color: var(--card-bg-color);
+
+    &:hover .card-content {
+        transform: rotateY(180deg);
+    }
+}
+
+.card-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform .3s ease-in-out;
+    backface-visibility: hidden;
+}
+
+.category-tag {
+    width: max-content;
+    padding: 8px;
+    border: 1px solid var(--text-color);
+    margin-bottom: 10px;
+    border-radius: 50px;
+    text-align: center;
+    line-height: 1;
+    font-size: 1em;
+}
+
+.question-card,
+.answer-card {
+    text-align: left;
+}
+
+.answer-card {
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
 }
 
 footer {
