--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ body {
     color: var(--text-color);
 }
 
-#card-container {
+.card-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -41,7 +41,7 @@ body {
     flex-basis: calc(33.33% - 10px);
     background-color: var(--card-bg-color);
 
-    &:hover .card-content {
+    &.active .card-content {
         transform: rotateY(180deg);
     }
 }
