--- a/assets/style.css
+++ b/assets/style.css
@@ -21,15 +21,14 @@ html, body {
 
 body {
     background-color: var(--bg-color);
-    background: url('img/bg-desktop.webp');
+    background: url('img/bg-mobile.webp') no-repeat;
+    background-size: cover;
     color: var(--text-color);
 }
 
 .card-container {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 10px;
     width: 100%;
     padding: 10px;
@@ -38,7 +37,7 @@ body {
 .card {
     height: 260px;
     padding: 17px;
-    flex-basis: calc(33.33% - 10px);
+    flex-basis: 100%;
     background-color: var(--card-bg-color);
 
     &.active .card-content {
@@ -80,7 +79,7 @@ body {
 }
 
 footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     padding: 5px;
@@ -91,4 +90,26 @@ footer {
 footer p {
     text-align: center;
     font-size: .7em;
+}
+
+@media screen and (min-width: 426px) {
+    body {
+        background: url('img/bg-tablet.webp');
+    }
+
+    .card-container {
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .card {
+        flex-basis: calc(33.33% - 10px);
+    }
+}
+
+@media screen and (min-width: 769px) {
+    body {
+        background: url('img/bg-desktop.webp');
+    }
 }
